[package]
name = "ghc-prof-compare"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2018"

[[bin]]
name = "ghc-prof-compare"
path = "src/ghc_prof_compare.rs"

[[bin]]
name = "fs-compare"
path = "src/fs_compare.rs"

[dependencies]
clap = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
