[package]
name = "ghc-utils"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2018"

[lib]
name = "ghc-utils"
path = "src/lib.rs"

[[bin]]
name = "ghc-prof-compare"
path = "bin/ghc_prof_compare.rs"

[[bin]]
name = "fs-compare"
path = "bin/fs_compare.rs"

[dependencies]
clap = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
