[package]
name = "ghc-utils"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2018"

[lib]
name = "ghc_utils"
path = "src/lib.rs"

[[bin]]
name = "ghc-prof-compare"
path = "bin/ghc_prof_compare.rs"

[[bin]]
name = "fs-compare"
path = "bin/fs_compare.rs"

[[bin]]
name = "obj-loc"
path = "bin/obj_loc.rs"

[dependencies]
ansi_term = "0.12.1"
clap = "2.3"
lazy_static = "1.4"
regex = "1"
rustyline = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
